--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-color": "^3.0.6",
     "@types/uuid": "^8.3.4",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "class-validator": "^0.13.2",
     "dayjs": "^1.11.4",
     "framer-motion": "^6.5.1",
@@ -34,6 +35,7 @@
     "notistack": "^2.0.5",
     "qs": "^6.11.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-color": "^2.19.3",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.0",
